force-app/main/default/objects/Child_Removal__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>((1 AND 2) OR (8 AND 9)) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Removals</relationshipLabel>
    <relationshipName>Child_Removals</relationshipName>
    <type>Lookup</type>
</CustomField>