force-app/main/default/objects/Child_Removal__c/fields/Do_you_want_to_proceed_with_placement__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_proceed_with_placement__c</fullName>
    <label>Do you want to proceed with placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>