force-app/main/default/objects/Child_Removal__c/fields/Narrative_1__c.field-meta.xml
<CustomField>
    <fullName>Narrative_1__c</fullName>
    <label>Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>