force-app/main/default/objects/Child_Removal__c/fields/Number_of_Days_Removal_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Removal_Open__c</fullName>
    <formula>IF(ISBLANK(DATEVALUE(Removal_End_Date_Time__c)) ,TODAY()-DATEVALUE(Removal_Date_Time__c),DATEVALUE(Removal_End_Date_Time__c)-DATEVALUE(Removal_Date_Time__c))</formula>
    <label>Number of Days Removal Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>