force-app/main/default/objects/Child_Removal__c/fields/PC_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>PC_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>