force-app/main/default/objects/Child_Removal__c/fields/PC_Country__c.field-meta.xml
<CustomField>
    <fullName>PC_Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>