force-app/main/default/objects/Child_Removal__c/fields/PC_State_Province__c.field-meta.xml
<CustomField>
    <fullName>PC_State_Province__c</fullName>
    <label>State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>