force-app/main/default/objects/Child_Removal__c/fields/Primary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Caregiver</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2 OR 3) AND ((4 AND 5) OR (6 AND 7))</booleanFilter>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Removals (Primary Caregiver)</relationshipLabel>
    <relationshipName>Child_Removals1</relationshipName>
    <type>Lookup</type>
</CustomField>