force-app/main/default/objects/Child_Removal__c/fields/Reason_for_Exit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Exit__c</fullName>
    <label>Reason for Exit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Disruption</fullName>
            </value>
            <value>
                <fullName>Adoption Finalization</fullName>
            </value>
            <value>
                <fullName>Court Ordered Return Home Against DSS Recommendation</fullName>
                <label>Court ordered return home against DSS recommendation</label>
            </value>
            <value>
                <fullName>Custody/Guardianship - Non-Relative</fullName>
            </value>
            <value>
                <fullName>Custody/Guardianship - Relative</fullName>
            </value>
            <value>
                <fullName>Custody Non-Relative</fullName>
            </value>
            <value>
                <fullName>Death of Child</fullName>
            </value>
            <value>
                <fullName>Emancipation - Independence</fullName>
            </value>
            <value>
                <fullName>Emancipation - Marriage</fullName>
            </value>
            <value>
                <fullName>Emancipation - Military</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Relative</fullName>
            </value>
            <value>
                <fullName>Remove GAP Suspension</fullName>
                <label>Remove GAP suspension</label>
            </value>
            <value>
                <fullName>Reunification</fullName>
            </value>
            <value>
                <fullName>Runaway</fullName>
            </value>
            <value>
                <fullName>Transfer to Another DHR Agency</fullName>
            </value>
            <value>
                <fullName>Live with other Relative</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>