force-app/main/default/objects/Child_Removal__c/fields/Removal_Date_of_DT_F__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_of_DT_F__c</fullName>
    <formula>DATEVALUE( Removal_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Removal Date of DT</label>
    <type>Date</type>
</CustomField>