force-app/main/default/objects/Child_Removal__c/fields/Removal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_Time__c</fullName>
    <label>Removal Date Time</label>
    <type>DateTime</type>
</CustomField>