force-app/main/default/objects/Child_Removal__c/fields/Removal_DateF__c.field-meta.xml
<CustomField>
    <fullName>Removal_DateF__c</fullName>
    <formula>IF( NOT(ISBLANK(Removal_End_Date_Time__c)) ,  
TEXT(MONTH( DATEVALUE(Removal_Date_Time__c)  ))+&apos;/&apos;+TEXT(DAY(DATEVALUE(Removal_Date_Time__c)))+&apos;/&apos;+TEXT(YEAR(DATEVALUE(Removal_Date_Time__c)))+&apos; - &apos;+  
TEXT(MONTH(DATEVALUE(Removal_End_Date_Time__c)))+&apos;/&apos;+TEXT(DAY(DATEVALUE(Removal_End_Date_Time__c)))+&apos;/&apos;+
TEXT(YEAR(DATEVALUE(Removal_End_Date_Time__c))), TEXT(MONTH(DATEVALUE(Removal_Date_Time__c)))+&apos;/&apos;+TEXT(DAY(DATEVALUE(Removal_Date_Time__c)))+&apos;/&apos;+TEXT(YEAR(DATEVALUE(Removal_Date_Time__c)))+&apos; - Open (&apos;+TEXT(Number_of_Days_Removal_Open__c)+&apos;)&apos;)</formula>
    <label>Removal Date</label>
    <type>Text</type>
</CustomField>