force-app/main/default/objects/Child_Removal__c/fields/SC_City__c.field-meta.xml
<CustomField>
    <fullName>SC_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>