force-app/main/default/objects/Child_Removal__c/fields/SC_Country__c.field-meta.xml
<CustomField>
    <fullName>SC_Country__c</fullName>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>