force-app/main/default/objects/Child_Removal__c/fields/Secondary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Removals (Secondary Caregiver)</relationshipLabel>
    <relationshipName>Child_Removals2</relationshipName>
    <type>Lookup</type>
</CustomField>